# RF_JsonLibrary

./: README.md  base.resource  pyproject.toml
resources/routes/: post_jsonplanceholder.resource
resources/routes/json/: jsonschema_example.json
resources/routes/schemas/: jsonschema_post_jsonplaceholder.json
resources/services/: post_jsonplanceholder.resource
resources/sessions/: jsonplaceholder_session.resource
tests/: test_jsonplaceholder.robot
