[tool.poetry]
name = "rf-jsonlibrary"
version = "0.1.0"
description = "EXPLORANDO A JSON LIBRARY COM ROBOT FRAMEWORK"
authors = ["Vinicius Trindade <vinicius.v.trindade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^7.0"
robotframework-requests = "^0.9.7"
robotframework-jsonlibrary = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
